Changed front end to svelte, added an email functionality to send an email to the user on post create
